reyes/parserib.output
Terminals unused in grammar

   CLIPPING
   DEPTHOFFIELD
   SHUTTER
   HIDER
   COLORSAMPLES
   RELATIVEDETAIL
   TEXTURECOORDINATES
   SHADINGINTERPOLATION
   MATTE
   AREALIGHTSOURCE
   ILLUMINATE
   ATMOSPHERE
   INTERIOR
   EXTERIOR
   BOUND
   DETAIL
   DETAILRANGE
   GEOMETRICAPPROXIMATION
   ORIENTATION
   REVERSEORIENTATION
   IDENTITY
   TRANSFORM
   CONCATTRANSFORM
   PERSPECTIVE
   SKEW
   DEFORMATION
   COORDINATESYSTEM
   TRANSFORMPOINTS
   ATTRIBUTE


Grammar

    0 $accept: input $end

    1 input: commands

    2 commands: /* empty */
    3         | commands command

    4 command: structure
    5        | options
    6        | shadingattributes
    7        | geometryattributes
    8        | primitive
    9        | error
   10        | makefunctions

   11 structure: FRAMEBEGIN NUM
   12          | FRAMEEND
   13          | WORLDBEGIN
   14          | WORLDEND
   15          | ATTRIBUTEBEGIN
   16          | ATTRIBUTEEND
   17          | MOTIONBEGIN
   18          | MOTIONEND
   19          | TRANSFORMBEGIN
   20          | TRANSFORMEND
   21          | SOLIDBEGIN
   22          | SOLIDEND
   23          | OBJECTBEGIN
   24          | OBJECTEND

   25 options: camera
   26        | display
   27        | OPTION '"' NAME '"' paramlist

   28 camera: FORMAT NUM NUM NUM
   29       | FRAMEASPECTRATIO NUM
   30       | SCREENWINDOW NUM NUM NUM NUM
   31       | CROPWINDOW NUM NUM NUM NUM
   32       | PROJECTION '"' NAME '"' paramlist

   33 display: PIXELVARIANCE NUM
   34        | PIXELSAMPLES NUM NUM
   35        | PIXELFILTER '"' filter '"' NUM NUM
   36        | EXPOSURE NUM NUM
   37        | IMAGER '"' NAME '"' paramlist
   38        | QUANTIZE '"' NAME '"' NUM NUM NUM NUM
   39        | DISPLAY '"' NAME '"' '"' NAME '"' '"' NAME '"' paramlist

   40 shadingattributes: colorandopacity
   41                  | lights
   42                  | SURFACE '"' NAME '"' paramlist
   43                  | SHADINGRATE NUM

   44 colorandopacity: COLOR '[' NUM NUM NUM ']'
   45                | OPACITY '[' NUM NUM NUM ']'

   46 lights: LIGHTSOURCE '"' NAME '"' paramlist

   47 geometryattributes: transformations
   48                   | SIDES NUM

   49 primitive: DISK NUM NUM NUM
   50          | SPHERE NUM NUM NUM NUM
   51          | CYLINDER NUM NUM NUM NUM
   52          | CONE NUM NUM NUM
   53          | TORUS NUM NUM NUM NUM NUM
   54          | HYPERBOLOID NUM NUM NUM NUM NUM NUM NUM
   55          | PARABOLOID NUM NUM NUM NUM

   56 paramlist: /* empty */
   57          | paramlist '"' NAME '"'
   58          | paramlist NUM
   59          | paramlist '[' NUM NUM NUM ']'

   60 transformations: ROTATE NUM NUM NUM NUM
   61                | SCALE NUM NUM NUM
   62                | TRANSLATE NUM NUM NUM
   63                | DISPLACEMENT '"' NAME '"' paramlist
   64                | DISPLACEMENT '"' '"'

   65 makefunctions: MAKETEXTURE '"' NAME '"' '"' NAME '"' '"' wrap '"' '"' wrap '"' '"' filter '"' NUM NUM

   66 filter: BOX
   67       | GAUSSIAN

   68 wrap: WRAPPERIODIC
   69     | WRAPCLAMP
   70     | WRAPBLACK


Terminals, with rules where they appear

$end (0) 0
'"' (34) 27 32 35 37 38 39 42 46 57 63 64 65
'[' (91) 44 45 59
']' (93) 44 45 59
error (256) 9
FRAMEBEGIN (258) 11
FRAMEEND (259) 12
WORLDBEGIN (260) 13
WORLDEND (261) 14
ATTRIBUTEBEGIN (262) 15
ATTRIBUTEEND (263) 16
MOTIONBEGIN (264) 17
MOTIONEND (265) 18
TRANSFORMBEGIN (266) 19
TRANSFORMEND (267) 20
SOLIDBEGIN (268) 21
SOLIDEND (269) 22
OBJECTBEGIN (270) 23
OBJECTEND (271) 24
FORMAT (272) 28
FRAMEASPECTRATIO (273) 29
SCREENWINDOW (274) 30
CROPWINDOW (275) 31
PROJECTION (276) 32
CLIPPING (277)
DEPTHOFFIELD (278)
SHUTTER (279)
PIXELVARIANCE (280) 33
PIXELSAMPLES (281) 34
PIXELFILTER (282) 35
EXPOSURE (283) 36
IMAGER (284) 37
QUANTIZE (285) 38
DISPLAY (286) 39
HIDER (287)
COLORSAMPLES (288)
RELATIVEDETAIL (289)
OPTION (290) 27
COLOR (291) 44
OPACITY (292) 45
TEXTURECOORDINATES (293)
SURFACE (294) 42
SHADINGRATE (295) 43
SHADINGINTERPOLATION (296)
MATTE (297)
LIGHTSOURCE (298) 46
AREALIGHTSOURCE (299)
ILLUMINATE (300)
ATMOSPHERE (301)
INTERIOR (302)
EXTERIOR (303)
BOUND (304)
DETAIL (305)
DETAILRANGE (306)
GEOMETRICAPPROXIMATION (307)
ORIENTATION (308)
REVERSEORIENTATION (309)
SIDES (310) 48
IDENTITY (311)
TRANSFORM (312)
CONCATTRANSFORM (313)
PERSPECTIVE (314)
TRANSLATE (315) 62
ROTATE (316) 60
SCALE (317) 61
SKEW (318)
DEFORMATION (319)
DISPLACEMENT (320) 63 64
COORDINATESYSTEM (321)
TRANSFORMPOINTS (322)
ATTRIBUTE (323)
MAKETEXTURE (324) 65
DISK (325) 49
SPHERE (326) 50
CYLINDER (327) 51
CONE (328) 52
TORUS (329) 53
HYPERBOLOID (330) 54
PARABOLOID (331) 55
BOX (332) 66
GAUSSIAN (333) 67
WRAPPERIODIC (334) 68
WRAPCLAMP (335) 69
WRAPBLACK (336) 70
NUM (337) 11 28 29 30 31 33 34 35 36 38 43 44 45 48 49 50 51 52 53
    54 55 58 59 60 61 62 65
NAME (338) 27 32 37 38 39 42 46 57 63 65


Nonterminals, with rules where they appear

$accept (87)
    on left: 0
input (88)
    on left: 1, on right: 0
commands (89)
    on left: 2 3, on right: 1 3
command (90)
    on left: 4 5 6 7 8 9 10, on right: 3
structure (91)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right: 4
options (92)
    on left: 25 26 27, on right: 5
camera (93)
    on left: 28 29 30 31 32, on right: 25
display (94)
    on left: 33 34 35 36 37 38 39, on right: 26
shadingattributes (95)
    on left: 40 41 42 43, on right: 6
colorandopacity (96)
    on left: 44 45, on right: 40
lights (97)
    on left: 46, on right: 41
geometryattributes (98)
    on left: 47 48, on right: 7
primitive (99)
    on left: 49 50 51 52 53 54 55, on right: 8
paramlist (100)
    on left: 56 57 58 59, on right: 27 32 37 39 42 46 57 58 59 63
transformations (101)
    on left: 60 61 62 63 64, on right: 47
makefunctions (102)
    on left: 65, on right: 10
filter (103)
    on left: 66 67, on right: 35 65
wrap (104)
    on left: 68 69 70, on right: 65


State 0

    0 $accept: . input $end

    $default  reduce using rule 2 (commands)

    input     go to state 1
    commands  go to state 2


State 1

    0 $accept: input . $end

    $end  shift, and go to state 3


State 2

    1 input: commands .
    3 commands: commands . command

    error             shift, and go to state 4
    FRAMEBEGIN        shift, and go to state 5
    FRAMEEND          shift, and go to state 6
    WORLDBEGIN        shift, and go to state 7
    WORLDEND          shift, and go to state 8
    ATTRIBUTEBEGIN    shift, and go to state 9
    ATTRIBUTEEND      shift, and go to state 10
    MOTIONBEGIN       shift, and go to state 11
    MOTIONEND         shift, and go to state 12
    TRANSFORMBEGIN    shift, and go to state 13
    TRANSFORMEND      shift, and go to state 14
    SOLIDBEGIN        shift, and go to state 15
    SOLIDEND          shift, and go to state 16
    OBJECTBEGIN       shift, and go to state 17
    OBJECTEND         shift, and go to state 18
    FORMAT            shift, and go to state 19
    FRAMEASPECTRATIO  shift, and go to state 20
    SCREENWINDOW      shift, and go to state 21
    CROPWINDOW        shift, and go to state 22
    PROJECTION        shift, and go to state 23
    PIXELVARIANCE     shift, and go to state 24
    PIXELSAMPLES      shift, and go to state 25
    PIXELFILTER       shift, and go to state 26
    EXPOSURE          shift, and go to state 27
    IMAGER            shift, and go to state 28
    QUANTIZE          shift, and go to state 29
    DISPLAY           shift, and go to state 30
    OPTION            shift, and go to state 31
    COLOR             shift, and go to state 32
    OPACITY           shift, and go to state 33
    SURFACE           shift, and go to state 34
    SHADINGRATE       shift, and go to state 35
    LIGHTSOURCE       shift, and go to state 36
    SIDES             shift, and go to state 37
    TRANSLATE         shift, and go to state 38
    ROTATE            shift, and go to state 39
    SCALE             shift, and go to state 40
    DISPLACEMENT      shift, and go to state 41
    MAKETEXTURE       shift, and go to state 42
    DISK              shift, and go to state 43
    SPHERE            shift, and go to state 44
    CYLINDER          shift, and go to state 45
    CONE              shift, and go to state 46
    TORUS             shift, and go to state 47
    HYPERBOLOID       shift, and go to state 48
    PARABOLOID        shift, and go to state 49

    $end  reduce using rule 1 (input)

    command             go to state 50
    structure           go to state 51
    options             go to state 52
    camera              go to state 53
    display             go to state 54
    shadingattributes   go to state 55
    colorandopacity     go to state 56
    lights              go to state 57
    geometryattributes  go to state 58
    primitive           go to state 59
    transformations     go to state 60
    makefunctions       go to state 61


State 3

    0 $accept: input $end .

    $default  accept


State 4

    9 command: error .

    $default  reduce using rule 9 (command)


State 5

   11 structure: FRAMEBEGIN . NUM

    NUM  shift, and go to state 62


State 6

   12 structure: FRAMEEND .

    $default  reduce using rule 12 (structure)


State 7

   13 structure: WORLDBEGIN .

    $default  reduce using rule 13 (structure)


State 8

   14 structure: WORLDEND .

    $default  reduce using rule 14 (structure)


State 9

   15 structure: ATTRIBUTEBEGIN .

    $default  reduce using rule 15 (structure)


State 10

   16 structure: ATTRIBUTEEND .

    $default  reduce using rule 16 (structure)


State 11

   17 structure: MOTIONBEGIN .

    $default  reduce using rule 17 (structure)


State 12

   18 structure: MOTIONEND .

    $default  reduce using rule 18 (structure)


State 13

   19 structure: TRANSFORMBEGIN .

    $default  reduce using rule 19 (structure)


State 14

   20 structure: TRANSFORMEND .

    $default  reduce using rule 20 (structure)


State 15

   21 structure: SOLIDBEGIN .

    $default  reduce using rule 21 (structure)


State 16

   22 structure: SOLIDEND .

    $default  reduce using rule 22 (structure)


State 17

   23 structure: OBJECTBEGIN .

    $default  reduce using rule 23 (structure)


State 18

   24 structure: OBJECTEND .

    $default  reduce using rule 24 (structure)


State 19

   28 camera: FORMAT . NUM NUM NUM

    NUM  shift, and go to state 63


State 20

   29 camera: FRAMEASPECTRATIO . NUM

    NUM  shift, and go to state 64


State 21

   30 camera: SCREENWINDOW . NUM NUM NUM NUM

    NUM  shift, and go to state 65


State 22

   31 camera: CROPWINDOW . NUM NUM NUM NUM

    NUM  shift, and go to state 66


State 23

   32 camera: PROJECTION . '"' NAME '"' paramlist

    '"'  shift, and go to state 67


State 24

   33 display: PIXELVARIANCE . NUM

    NUM  shift, and go to state 68


State 25

   34 display: PIXELSAMPLES . NUM NUM

    NUM  shift, and go to state 69


State 26

   35 display: PIXELFILTER . '"' filter '"' NUM NUM

    '"'  shift, and go to state 70


State 27

   36 display: EXPOSURE . NUM NUM

    NUM  shift, and go to state 71


State 28

   37 display: IMAGER . '"' NAME '"' paramlist

    '"'  shift, and go to state 72


State 29

   38 display: QUANTIZE . '"' NAME '"' NUM NUM NUM NUM

    '"'  shift, and go to state 73


State 30

   39 display: DISPLAY . '"' NAME '"' '"' NAME '"' '"' NAME '"' paramlist

    '"'  shift, and go to state 74


State 31

   27 options: OPTION . '"' NAME '"' paramlist

    '"'  shift, and go to state 75


State 32

   44 colorandopacity: COLOR . '[' NUM NUM NUM ']'

    '['  shift, and go to state 76


State 33

   45 colorandopacity: OPACITY . '[' NUM NUM NUM ']'

    '['  shift, and go to state 77


State 34

   42 shadingattributes: SURFACE . '"' NAME '"' paramlist

    '"'  shift, and go to state 78


State 35

   43 shadingattributes: SHADINGRATE . NUM

    NUM  shift, and go to state 79


State 36

   46 lights: LIGHTSOURCE . '"' NAME '"' paramlist

    '"'  shift, and go to state 80


State 37

   48 geometryattributes: SIDES . NUM

    NUM  shift, and go to state 81


State 38

   62 transformations: TRANSLATE . NUM NUM NUM

    NUM  shift, and go to state 82


State 39

   60 transformations: ROTATE . NUM NUM NUM NUM

    NUM  shift, and go to state 83


State 40

   61 transformations: SCALE . NUM NUM NUM

    NUM  shift, and go to state 84


State 41

   63 transformations: DISPLACEMENT . '"' NAME '"' paramlist
   64                | DISPLACEMENT . '"' '"'

    '"'  shift, and go to state 85


State 42

   65 makefunctions: MAKETEXTURE . '"' NAME '"' '"' NAME '"' '"' wrap '"' '"' wrap '"' '"' filter '"' NUM NUM

    '"'  shift, and go to state 86


State 43

   49 primitive: DISK . NUM NUM NUM

    NUM  shift, and go to state 87


State 44

   50 primitive: SPHERE . NUM NUM NUM NUM

    NUM  shift, and go to state 88


State 45

   51 primitive: CYLINDER . NUM NUM NUM NUM

    NUM  shift, and go to state 89


State 46

   52 primitive: CONE . NUM NUM NUM

    NUM  shift, and go to state 90


State 47

   53 primitive: TORUS . NUM NUM NUM NUM NUM

    NUM  shift, and go to state 91


State 48

   54 primitive: HYPERBOLOID . NUM NUM NUM NUM NUM NUM NUM

    NUM  shift, and go to state 92


State 49

   55 primitive: PARABOLOID . NUM NUM NUM NUM

    NUM  shift, and go to state 93


State 50

    3 commands: commands command .

    $default  reduce using rule 3 (commands)


State 51

    4 command: structure .

    $default  reduce using rule 4 (command)


State 52

    5 command: options .

    $default  reduce using rule 5 (command)


State 53

   25 options: camera .

    $default  reduce using rule 25 (options)


State 54

   26 options: display .

    $default  reduce using rule 26 (options)


State 55

    6 command: shadingattributes .

    $default  reduce using rule 6 (command)


State 56

   40 shadingattributes: colorandopacity .

    $default  reduce using rule 40 (shadingattributes)


State 57

   41 shadingattributes: lights .

    $default  reduce using rule 41 (shadingattributes)


State 58

    7 command: geometryattributes .

    $default  reduce using rule 7 (command)


State 59

    8 command: primitive .

    $default  reduce using rule 8 (command)


State 60

   47 geometryattributes: transformations .

    $default  reduce using rule 47 (geometryattributes)


State 61

   10 command: makefunctions .

    $default  reduce using rule 10 (command)


State 62

   11 structure: FRAMEBEGIN NUM .

    $default  reduce using rule 11 (structure)


State 63

   28 camera: FORMAT NUM . NUM NUM

    NUM  shift, and go to state 94


State 64

   29 camera: FRAMEASPECTRATIO NUM .

    $default  reduce using rule 29 (camera)


State 65

   30 camera: SCREENWINDOW NUM . NUM NUM NUM

    NUM  shift, and go to state 95


State 66

   31 camera: CROPWINDOW NUM . NUM NUM NUM

    NUM  shift, and go to state 96


State 67

   32 camera: PROJECTION '"' . NAME '"' paramlist

    NAME  shift, and go to state 97


State 68

   33 display: PIXELVARIANCE NUM .

    $default  reduce using rule 33 (display)


State 69

   34 display: PIXELSAMPLES NUM . NUM

    NUM  shift, and go to state 98


State 70

   35 display: PIXELFILTER '"' . filter '"' NUM NUM

    BOX       shift, and go to state 99
    GAUSSIAN  shift, and go to state 100

    filter  go to state 101


State 71

   36 display: EXPOSURE NUM . NUM

    NUM  shift, and go to state 102


State 72

   37 display: IMAGER '"' . NAME '"' paramlist

    NAME  shift, and go to state 103


State 73

   38 display: QUANTIZE '"' . NAME '"' NUM NUM NUM NUM

    NAME  shift, and go to state 104


State 74

   39 display: DISPLAY '"' . NAME '"' '"' NAME '"' '"' NAME '"' paramlist

    NAME  shift, and go to state 105


State 75

   27 options: OPTION '"' . NAME '"' paramlist

    NAME  shift, and go to state 106


State 76

   44 colorandopacity: COLOR '[' . NUM NUM NUM ']'

    NUM  shift, and go to state 107


State 77

   45 colorandopacity: OPACITY '[' . NUM NUM NUM ']'

    NUM  shift, and go to state 108


State 78

   42 shadingattributes: SURFACE '"' . NAME '"' paramlist

    NAME  shift, and go to state 109


State 79

   43 shadingattributes: SHADINGRATE NUM .

    $default  reduce using rule 43 (shadingattributes)


State 80

   46 lights: LIGHTSOURCE '"' . NAME '"' paramlist

    NAME  shift, and go to state 110


State 81

   48 geometryattributes: SIDES NUM .

    $default  reduce using rule 48 (geometryattributes)


State 82

   62 transformations: TRANSLATE NUM . NUM NUM

    NUM  shift, and go to state 111


State 83

   60 transformations: ROTATE NUM . NUM NUM NUM

    NUM  shift, and go to state 112


State 84

   61 transformations: SCALE NUM . NUM NUM

    NUM  shift, and go to state 113


State 85

   63 transformations: DISPLACEMENT '"' . NAME '"' paramlist
   64                | DISPLACEMENT '"' . '"'

    NAME  shift, and go to state 114
    '"'   shift, and go to state 115


State 86

   65 makefunctions: MAKETEXTURE '"' . NAME '"' '"' NAME '"' '"' wrap '"' '"' wrap '"' '"' filter '"' NUM NUM

    NAME  shift, and go to state 116


State 87

   49 primitive: DISK NUM . NUM NUM

    NUM  shift, and go to state 117


State 88

   50 primitive: SPHERE NUM . NUM NUM NUM

    NUM  shift, and go to state 118


State 89

   51 primitive: CYLINDER NUM . NUM NUM NUM

    NUM  shift, and go to state 119
